[gd_scene load_steps=10 format=3 uid="uid://bft1o7axonb8y"]

[ext_resource type="Script" path="res://World/Container/treasure_chest.gd" id="1_21due"]
[ext_resource type="Texture2D" uid="uid://bvqt2ofduovlv" path="res://assets/images/TreasureChest-Sheet.png" id="1_c38hk"]
[ext_resource type="Script" path="res://components/HurtBox.gd" id="3_m481x"]
[ext_resource type="Script" path="res://components/TreasureSpawner.gd" id="4_g0y5n"]
[ext_resource type="PackedScene" uid="uid://qmo42ehmat1a" path="res://components/interaction_area.tscn" id="5_hd1i0"]
[ext_resource type="Script" path="res://components/fx_spawner.gd" id="6_6yxvl"]
[ext_resource type="PackedScene" uid="uid://dnwt5yr4pl2d" path="res://Effects/explosion_1.tscn" id="7_qstp3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2538b"]
size = Vector2(8, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_s3vn6"]
radius = 4.0

[node name="TreasureChest" type="Node2D"]
script = ExtResource("1_21due")
treasure_size = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -4)
texture = ExtResource("1_c38hk")
hframes = 2

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
script = ExtResource("3_m481x")

[node name="CollisionShapeHurtbox" type="CollisionShape2D" parent="HurtBox"]
unique_name_in_owner = true
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_2538b")

[node name="InteractionArea" parent="." instance=ExtResource("5_hd1i0")]
position = Vector2(0, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_s3vn6")

[node name="TreasureSpawner" type="Node" parent="."]
script = ExtResource("4_g0y5n")

[node name="FXSpawner" type="Node2D" parent="."]
position = Vector2(0, -3)
script = ExtResource("6_6yxvl")
effect = ExtResource("7_qstp3")

[connection signal="hit" from="HurtBox" to="." method="_on_hurt_box_hit"]
[connection signal="in_focus" from="InteractionArea" to="." method="_on_interaction_area_in_focus"]
[connection signal="interacted" from="InteractionArea" to="." method="_on_interaction_area_interacted"]
